fix dependency issues